--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Check Build Possibility
 on:
   pull_request:
     branches:
-      - dev
+      - develop
       
 jobs:
   try-frontend-build:
