--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,8 @@
-name: Continuous Deployment
+name: Check Build Possibility
 
 on:
-  push:
+  pull_request:
     branches: [ "develop" ]
-  workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'Log level'
-        required: true
-        default: 'warning'
-        type: choice
-        options:
-          - info
-          - warning
-          - debug
-      tags:
-        description: 'Test scenario tags'
-        required: false
-        type: boolean
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: false
-
-permissions:
-  contents: read
       
 jobs:
   try-frontend-build:
